--- a/server/class 4/package.json
+++ b/server/class 4/package.json
@@ -10,7 +10,10 @@
   "author": "sk ahmer ali",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.2"
   }
 }
